# ex-int-cli-min

./: .clang-format  CMakeLists.txt  README.md
src/: app.c
